  (Takafumi Saikawa and Jacques Garrigue, review by Gabriel Scherer and
   Florian Angeletti)

- #10133: module type substitutions
  Allow 'SIG with module type T = F(X).S', 'SIG with module type T := sig end'
  and their local equivalent `module type T := sig type u end`
  (Florian Angeletti, review by Gabriel Radanne and Leo White)

### Runtime system:

- #9284: Add -config option to display the configuration of ocamlrun on stdout,
  including the search path for shared stub libraries.
  (David Allsopp, review by Xavier Leroy)

- #9934: Optimise sweeping using prefetching.
  (Stephen Dolan and Will Hasenplaugh, review by David Allsopp, Xavier
   Leroy and Damien Doligez, benchmarking by Shubham Kumar and KC
   Sivaramakrishnan)

- #10102: Ignore PROFINFO_WIDTH if WITH_PROFINFO is not defined (technically
  a breaking change if the configuration system was being abused before).
  (David Allsopp, review by Xavier Leroy)

- #10107: Ensure modules compiled with -afl-instrument can still link on
  platforms without AFL support.
  (David Allsopp, review by Xavier Leroy)

* #10098: Improve command-line parsing in ocamlrun: strictly recognise options,
  be more informative for `ocamlrun -I` and support `--` for terminating options
  parsing.
  (David Allsopp, review by Xavier Leroy)

- #10101: Add -help/--help option to ocamlrun.
  (David Allsopp, review by Xavier Leroy)

- #10136: Minor clean-ups in runtime/io.c and runtime/caml/io.h
  (Xavier Leroy, review by David Allsopp and Guillaume Munch-Maccagnoni)

- #10171: Tweak the naked pointers checker so that processes which trigger the
  alarm always exit with non-zero status (i.e. exit(0) becomes exit(70)).
  (David Allsopp, review by Xavier Leroy)

- #10188, #10213: Switch the default allocation policy to best-fit and adjust
  the default overhead parameter accordingly.
  (Damien Doligez, review by Josh Berdine and Xavier Leroy)

- #10212: Simplify and improve the Windows-specific code that connects