@@ -307,7 +307,8 @@ let type_declaration' copy_scope s decl =
       begin match decl.type_kind with
         Type_abstract -> Type_abstract
       | Type_variant (cstrs, rep) ->
-          Type_variant (List.map (constructor_declaration copy_scope s) cstrs, rep)
+          Type_variant (List.map (constructor_declaration copy_scope s) cstrs,
+                        rep)
       | Type_record(lbls, rep) ->
           Type_record (List.map (label_declaration copy_scope s) lbls, rep)
       | Type_open -> Type_open
